tests/baselines/reference/staticOffOfInstance1.errors.txt
tests/cases/compiler/staticOffOfInstance1.ts(3,10): error TS2576: Property 'Foo' is a static member of type 'List'


==== tests/cases/compiler/staticOffOfInstance1.ts (1 errors) ====
    class List {
      public Blah() {
        this.Foo();
             ~~~
!!! error TS2576: Property 'Foo' is a static member of type 'List'
      }
      public static Foo() {}
    }